--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ configparser = "^5.0.1"
 pandas = "^1.1.4"
 numpy = "1.18.0"
 google-cloud-storage = "^1.33.0"
+setuptools = "^50.3.2"
+PyYAML = "^5.3.1"
+Cerberus = "^1.3.2"
+colorama = "^0.4.4"
+coloredlogs = "^14.0"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
