--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,10 @@ authors = ["Kangyi LI <kangyi.li@polynom.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 python-keycloak = "^0.23.0"
-configparser = "^5.0.1"
 pandas = "^1.1.4"
 numpy = "1.18.0"
-google-cloud-storage = "^1.33.0"
-setuptools = "^50.3.2"
 PyYAML = "^5.3.1"
 Cerberus = "^1.3.2"
-colorama = "^0.4.4"
 coloredlogs = "^14.0"
 click = "^7.1.2"
 
@@ -26,3 +22,6 @@ pylint = "^2.6.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+kcctl = 'keycloak_sync.kcctl:kcctl'
