--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ PyYAML = "^5.3.1"
 Cerberus = "^1.3.2"
 coloredlogs = "^14.0"
 click = "^7.1.2"
+colorama = "^0.4.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
