--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "keycloak_sync"
-version = "0.1.7"
+version = "0.1.8"
 description = "keycloak cli tool"
 authors = ["Kangyi LI <kangyi.li@polynom.com>"]
 
@@ -14,6 +14,7 @@ Cerberus = "^1.3.2"
 coloredlogs = "^14.0"
 click = "^7.1.2"
 colorama = "^0.4.4"
+google-cloud-storage = "^1.34.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -26,3 +27,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 kcctl = 'keycloak_sync.kcctl:kcctl'
+
