--- a/.gitignore
+++ b/.gitignore
@@ -188,7 +188,7 @@ dmypy.json
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 *.csv
-entrypoint.py
+#entrypoint.py
 notebook*
 testyaml.py
 tt.py
